handle avatars location path from web.xml